@@ -4,10 +4,13 @@ Changes for Crate
 
 Unreleased
 ==========
- 
+
+ - Fix: Prevent NPE in COPY FROM and INSERT FROM SUBQUERY queries
+   when newly created shards are not available yet
+
  - Fixed an issue that causes a ClosedChannelException during BLOB download
 
- - Fixed a bug that causes a NaN response on _score system column in select 
+ - Fixed a bug that causes a NaN response on _score system column in select
    statement that uses an ORDER BY clause
 
  - Fix: in some rare cases tables were not updated on every node after table
